--- a/package.json
+++ b/package.json
@@ -1,19 +1,75 @@
 {
-  "name": "nextjs_template",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "11.0.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
-  },
-  "devDependencies": {
-    "@types/react": "17.0.15",
-    "typescript": "4.3.5"
-  }
+	"name": "nextjs_template",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"dev-debug": "cross-env NODE_OPTIONS='--inspect' next dev",
+		"analyze": "cross-env ANALYZE=true next build",
+		"build": "next build",
+		"start": "next start",
+		"type-check": "tsc --pretty --noEmit",
+		"format": "prettier --write .",
+		"lint": "eslint . --ext ts --ext tsx --ext js",
+		"lint:fix": "eslint . --ext ts --ext tsx --ext js --fix",
+		"test": "jest --env=jsdom",
+		"test:watch": "jest --watch",
+		"test-all": "npm run lint && npm run type-check && npm run test"
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "lint-staged",
+			"pre-push": "npm run type-check"
+		}
+	},
+	"lint-staged": {
+		"*.@(ts|tsx)": [
+			"npm run lint",
+			"npm run format"
+		]
+	},
+	"dependencies": {
+		"classnames": "^2.3.1",
+		"lodash": "^4.17.21",
+		"next": "^11.1.0",
+		"react": "17.0.2",
+		"react-dom": "17.0.2",
+		"swr": "^0.5.6"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.15.0",
+		"@next/bundle-analyzer": "^11.1.0",
+		"@tailwindcss/forms": "^0.3.3",
+		"@testing-library/dom": "^8.1.0",
+		"@testing-library/jest-dom": "^5.14.1",
+		"@testing-library/react": "^12.0.0",
+		"@types/babel__core": "^7.1.15",
+		"@types/eslint": "^7.28.0",
+		"@types/lodash": "^4.14.172",
+		"@types/prettier": "^2.3.2",
+		"@types/react": "17.0.15",
+		"@types/react-dom": "17.0.2",
+		"@types/testing-library__jest-dom": "^5.14.1",
+		"@typescript-eslint/eslint-plugin": "^4.29.0",
+		"autoprefixer": "^10.3.1",
+		"babel-jest": "^27.0.6",
+		"cross-env": "^7.0.3",
+		"eslint": "^7.32.0",
+		"eslint-config-airbnb-typescript": "^12.3.1",
+		"eslint-config-next": "^11.0.1",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-jest": "^24.4.0",
+		"husky": "^7.0.1",
+		"jest": "^27.0.6",
+		"jest-watch-typeahead": "^0.6.4",
+		"lint-staged": "^11.1.1",
+		"next-page-tester": "^0.27.2",
+		"node-mocks-http": "^1.10.1",
+		"postcss": "^8.3.6",
+		"prettier": "^2.3.2",
+		"tailwindcss": "^2.2.7",
+		"ts-jest": "^27.0.4",
+		"ts-loader": "^9.2.5",
+		"typescript": "4.3.5"
+	}
 }
