--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "nextjs_template",
+	"name": "checkist",
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
@@ -29,6 +29,7 @@
 		]
 	},
 	"dependencies": {
+		"@graxmonzo/tailwind-caret-color": "^2.0.5",
 		"classnames": "^2.3.1",
 		"lodash": "^4.17.21",
 		"next": "^11.1.0",
