tsconfig.json update

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,13 @@
 {
 	"compilerOptions": {
-		"types": [
-			"aria-query"
-		],
+		"types": ["aria-query"],
 		"baseUrl": ".",
 		"target": "es5",
 		"paths": {
-			"@components": [
-				"components/*"
-			],
-			"@styles": [
-				"styles/*"
-			]
+			"@components": ["components/*"],
+			"@styles": ["styles/*"]
 		},
-		"lib": [
-			"dom",
-			"dom.iterable",
-			"esnext"
-		],
+		"lib": ["dom", "dom.iterable", "esnext"],
 		"allowJs": true,
 		"skipLibCheck": true,
 		"strict": true,
@@ -42,7 +32,5 @@
 		"__test__",
 		"setupTests.js"
 	],
-	"exclude": [
-		"node_modules"
-	]
+	"exclude": ["node_modules"]
 }
