--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 	},
 	"devDependencies": {
 		"@babel/core": "^7.15.0",
+		"@graxmonzo/tailwind-caret-color": "^2.0.5",
 		"@next/bundle-analyzer": "^11.1.0",
 		"@tailwindcss/forms": "^0.3.3",
 		"@testing-library/dom": "^8.1.0",
