--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "checkist",
+	"name": "tasklist",
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
@@ -12,7 +12,7 @@
 		"format": "prettier --write .",
 		"lint": "eslint . --ext ts --ext tsx --ext js",
 		"lint:fix": "eslint . --ext ts --ext tsx --ext js --fix",
-		"test": "jest --env=jsdom",
+		"test": "jest --env=jsdom --passWithNoTests",
 		"test:watch": "jest --watch",
 		"test-all": "npm run lint && npm run type-check && npm run test"
 	},
@@ -34,10 +34,16 @@
 		"next": "^11.1.0",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
-		"swr": "^0.5.6"
+		"react-redux": "^7.2.5",
+		"react-use": "^17.3.1",
+		"redux": "^4.1.1",
+		"redux-persist": "^6.0.0",
+		"swr": "^0.5.6",
+		"uuid": "^8.3.2"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.15.0",
+		"@babel/preset-env": "^7.15.6",
 		"@graxmonzo/tailwind-caret-color": "^2.0.5",
 		"@next/bundle-analyzer": "^11.1.0",
 		"@tailwindcss/forms": "^0.3.3",
@@ -50,6 +56,7 @@
 		"@types/prettier": "^2.3.2",
 		"@types/react": "17.0.15",
 		"@types/react-dom": "17.0.2",
+		"@types/react-redux": "^7.1.18",
 		"@types/testing-library__jest-dom": "^5.14.1",
 		"@typescript-eslint/eslint-plugin": "^4.29.0",
 		"autoprefixer": "^10.3.1",
@@ -68,6 +75,8 @@
 		"node-mocks-http": "^1.10.1",
 		"postcss": "^8.3.6",
 		"prettier": "^2.3.2",
+		"redux-devtools": "^3.7.0",
+		"redux-devtools-extension": "^2.13.9",
 		"tailwindcss": "^2.2.7",
 		"ts-jest": "^27.0.4",
 		"ts-loader": "^9.2.5",
