--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 	},
 	"devDependencies": {
 		"@babel/core": "^7.15.0",
+		"@babel/plugin-transform-runtime": "^7.15.0",
 		"@babel/preset-env": "^7.15.6",
 		"@graxmonzo/tailwind-caret-color": "^2.0.5",
 		"@next/bundle-analyzer": "^11.1.0",
